syntax = "proto3";
package echo;

option optimize_for = LITE_RUNTIME;

message Hello {
  string greeting = 1;
}

message write_info {
  uint64 data = 1;
  uint64 size = 2;
  uint32 origin_key = 3;
}

message read_info {
  uint64 data = 1;
  uint64 size = 2;
  uint32 origin_key = 3;
}
